# backend/src/routes/slide.ts
@@ -1,0 +1,106 @@
+import { Router, Request, Response } from "express";
+import slideModel from "../models/slide";
+import { verifyToken } from "../validation";
+
+const router = Router();
+
+// Create document - POST
+router.post("/", verifyToken, (req: Request, res: Response) => {
+  const data = req.body;
+  slideModel
+    .create(data)
+    .then((insertedData) => {
+      res.status(201).send(insertedData);
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message });
+    });
+});
+
+// Read all documents - GET
+router.get("/", (req: Request, res: Response) => {
+  const fields =
+    typeof req.query.fields === "string"
+      ? req.query.fields.split(",").join(" ")
+      : "";
+  slideModel
+    .find({}, fields)
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message });
+    });
+});
+
+// Read specific document by ID - GET
+router.get("/:id", (req: Request, res: Response) => {
+  const fields =
+    typeof req.query.fields === "string"
+      ? req.query.fields.split(",").join(" ")
+      : "";
+  slideModel
+    .findById(req.params.id, fields)
+    .then((data) => {
+      res.send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message });
+    });
+});
+
+// Update document - PUT
+router.put("/:id", verifyToken, (req: Request, res: Response) => {
+  const { id } = req.params;
+  const updatedSlide = req.body;
+
+  slideModel
+    .findByIdAndUpdate(id, updatedSlide, { new: true })
+    .then((data) => {
+      if (!data) {
+        res.status(404).send({
+          message: `Cannot update document with id=${id}. Maybe document was not found!`,
+        });
+      } else {
+        res.send(data);
+      }
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message });
+    });
+});
+
+// Delete document - DELETE
+router.delete("/:id", verifyToken, (req: Request, res: Response) => {
+  const { id } = req.params;
+  slideModel
+    .findByIdAndDelete(id)
+    .then((data) => {
+      if (!data) {
+        res.status(404).send({
+          message: `Cannot update document with id=${id}. Maybe document was not found!`,
+        });
+      } else {
+        res.send({ message: "Document was deleted successfully!" });
+      }
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message });
+    });
+});
+
+// Delete all documents - DELETE
+router.delete("/", verifyToken, (req: Request, res: Response) => {
+  slideModel
+    .deleteMany({})
+    .then((result) => {
+      res.send({
+        message: `${result.deletedCount} documents were deleted successfully!`,
+      });
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message });
+    });
+});
+
+export default router;
